main.tf
module "vault_hvd_primary" {
  source = "git@github.com:nphilbrook/terraform-aws-vault-enterprise-hvd?ref=main"
  # source = "git@github.com:nphilbrook/terraform-aws-vault-enterprise-hvd?ref=nphilbrook_custom_target_groups"
  #------------------------------------------------------------------------------
  # Common
  #------------------------------------------------------------------------------
  friendly_name_prefix = "vault"
  vault_fqdn           = local.vault_primary_fqdn
  # later
  vault_version = "1.21.3+ent"

  #------------------------------------------------------------------------------
  # Networking
  #------------------------------------------------------------------------------
  net_vpc_id            = local.w2_vpc_id
  load_balancing_scheme = "EXTERNAL"
  net_vault_subnet_ids  = data.aws_subnets.private_subnets.ids
  net_lb_subnet_ids     = data.aws_subnets.public_subnets.ids

  net_ingress_vault_security_group_ids = [local.w2_bastion_security_group]
  net_ingress_vault_cidr_blocks        = [data.aws_vpc.secondary.cidr_block]

  net_ingress_ssh_security_group_ids = [local.w2_bastion_security_group]
  net_ingress_lb_security_group_ids  = [local.w2_bastion_security_group]
  net_ingress_lb_cidr_blocks         = concat([data.aws_vpc.secondary.cidr_block], local.public_lb_ingress_cidrs)

  create_route53_vault_dns_record      = true
  route53_vault_hosted_zone_name       = local.r53_zone
  route53_vault_hosted_zone_is_private = false

  # Testing cluster API LB
  enable_vault_cluster_port_listener = true
  net_ingress_lb_cluster_cidr_blocks = [data.aws_vpc.secondary.cidr_block, data.aws_vpc.primary.cidr_block]

  # From a fork that allows dual private/public LBs
  # custom_target_group_arns = [aws_lb_target_group.vault_public_primary.arn]

  #------------------------------------------------------------------------------
  # AWS Secrets Manager installation secrets and AWS KMS unseal key
  #------------------------------------------------------------------------------
  sm_vault_license_arn      = aws_secretsmanager_secret.vault_license.arn
  sm_vault_tls_cert_arn     = aws_secretsmanager_secret.vault_tls_cert.arn
  sm_vault_tls_cert_key_arn = aws_secretsmanager_secret.vault_tls_privkey.arn
  sm_vault_tls_ca_bundle    = null # publicly trusted cert from Let's Encrypt, so no CA bundle
  vault_seal_awskms_key_arn = aws_kms_key.unseal.arn

  #------------------------------------------------------------------------------
  # Compute
  #------------------------------------------------------------------------------
  vm_key_pair_name = local.key_pair_name
  vm_instance_type = "t3a.medium"
  asg_node_count   = 6
  vm_image_id      = data.aws_ami.hc_base_rhel9.id
  ec2_os_distro    = "rhel"

  depends_on = [
    aws_secretsmanager_secret_version.vault_license,
    aws_secretsmanager_secret_version.vault_tls_cert,
    aws_secretsmanager_secret_version.vault_tls_privkey,
    aws_kms_key.unseal
  ]
}

# Needed to enable ingress from bastion host to public LB on port 8201
# resource "aws_security_group_rule" "primary_cluster_cluster_from_bastion" {
#   type              = "ingress"
#   from_port         = 8201
#   to_port           = 8201
#   protocol          = "tcp"
#   cidr_blocks       = ["35.88.147.34/32"]
#   description       = "Vault cluster port from bastion host"
#   security_group_id = data.aws_security_group.vault_primary_sg.id
# }

resource "aws_security_group_rule" "primary_cluster_lb_cluster_from_bastion" {
  type              = "ingress"
  from_port         = 8201
  to_port           = 8201
  protocol          = "tcp"
  cidr_blocks       = ["35.88.147.34/32"]
  description       = "Vault cluster port from bastion host"
  security_group_id = module.vault_hvd_primary.vault_load_balancer_security_group_id
}

module "vault_hvd_pr" {
  source = "git@github.com:nphilbrook/terraform-aws-vault-enterprise-hvd?ref=main"
  # source = "git@github.com:nphilbrook/terraform-aws-vault-enterprise-hvd?ref=nphilbrook_custom_target_groups"

  providers = {
    aws = aws.secondary
  }
  #------------------------------------------------------------------------------
  # Common
  #------------------------------------------------------------------------------
  friendly_name_prefix = "e2prvault"
  vault_fqdn           = local.vault_pr
  # later
  vault_version = "1.21.3+ent"

  #------------------------------------------------------------------------------
  # Networking
  #------------------------------------------------------------------------------
  net_vpc_id            = module.prereqs_use2.vpc_id
  load_balancing_scheme = "EXTERNAL"
  net_vault_subnet_ids  = module.prereqs_use2.private_subnet_ids
  net_lb_subnet_ids     = module.prereqs_use2.public_subnet_ids

  net_ingress_vault_security_group_ids = [module.prereqs_use2.bastion_security_group_id]
  net_ingress_vault_cidr_blocks        = [data.aws_vpc.primary.cidr_block]

  net_ingress_ssh_security_group_ids = [module.prereqs_use2.bastion_security_group_id]
  net_ingress_lb_security_group_ids  = [module.prereqs_use2.bastion_security_group_id]
  net_ingress_lb_cidr_blocks         = concat([data.aws_vpc.primary.cidr_block], local.public_lb_ingress_cidrs)

  create_route53_vault_dns_record      = true
  route53_vault_hosted_zone_name       = local.r53_zone
  route53_vault_hosted_zone_is_private = false

  # Testing cluster API LB
  enable_vault_cluster_port_listener = true
  net_ingress_lb_cluster_cidr_blocks = [data.aws_vpc.primary.cidr_block, data.aws_vpc.secondary.cidr_block]

  # From a fork that allows dual private/public LBs
  # custom_target_group_arns = [aws_lb_target_group.vault_public_pr.arn]

  #------------------------------------------------------------------------------
  # AWS Secrets Manager installation secrets and AWS KMS unseal key
  #------------------------------------------------------------------------------
  sm_vault_license_arn      = module.prereqs_use2.vault_license_secret_arn
  sm_vault_tls_cert_arn     = module.prereqs_use2.vault_tls_cert_secret_arn
  sm_vault_tls_cert_key_arn = module.prereqs_use2.vault_tls_privkey_secret_arn
  sm_vault_tls_ca_bundle    = null # publicly trusted cert from Let's Encrypt, so no CA bundle
  vault_seal_awskms_key_arn = aws_kms_key.unseal_use2.arn

  #------------------------------------------------------------------------------
  # Compute
  #------------------------------------------------------------------------------
  vm_key_pair_name = local.key_pair_name
  vm_instance_type = "t3a.medium"
  asg_node_count   = 6
  vm_image_id      = data.aws_ami.hc_base_rhel9_e2.id
  ec2_os_distro    = "rhel"

  depends_on = [
    module.prereqs_use2,
    aws_kms_key.unseal_use2
  ]
}

# Must be manually repointed in the case of a failover
resource "aws_route53_record" "vault_cname" {
  zone_id = data.aws_route53_zone.public_zone.zone_id
  name    = local.vault_fqdn
  type    = "CNAME"
  ttl     = 300
  records = [local.vault_primary_fqdn]
}
